--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans">
-    <link rel="stylesheet" href="/css/normalize.min.css">
-    <link rel="stylesheet" href="/css/app.css">
 </head>
 <body>
 
@@ -27,14 +25,14 @@
     </header>
 
     <div class="container">
-        <main>
             <h2 class="visuallyhidden">Article</h2>
-
+     
             <article>
     <header>
         <h2>Portfolio</h2>
     </header>
-
+        </article>                
     <hr>
+ </div>
 </body>
 </html>
