Update About section on profile page

--- a/index.html
+++ b/index.html
@@ -45,20 +45,26 @@
             <div class="sidebar-text">
                 <h2>About Me</h2>
                 <p>I am interested in using data to solve real-world problems. My journey is to continually improve my skills in data analysis and data engineering.</p>
-				<!-- 
-                <section>
+				 
+                <section>			
                     <h3 class="visuallyhidden">Social Links</h3>
-                    <a class="social-link" href="https://twitter.com/udacity">
-                        <img src="img/social-twitter.png" alt="Twitter">
+					<h3> 🤝🏻 Connect with Me </h3>				
+					<a class="social-link" href="https://www.linkedin.com/in/michaelwalbers/">
+						<img align="left" alt="Michael's LinkedIn" width="22px" src="img/linkedin-svgrepo-com.svg" alt="Linked In" />
+					</a>	
+                    <a class="social-link" href="https://twitter.com/mwalbers1">
+						<img align="left" alt="Michael's LinkedIn" width="22px" src="img/twitter-svgrepo-com.svg" alt="Twitter" />
                     </a>
+					
+					<!--
                     <a class="social-link" href="https://www.instagram.com/udacity/">
                         <img src="img/social-instagram.png" alt="Instagram">
                     </a>
                     <a class="social-link" href="https://plus.google.com/+Udacity">
                         <img src="img/social-google.png" alt="Google Plus">
                     </a>
-                </section>
-				-->
+					-->
+                </section>				
             </div>
         </aside>
     </div>
