fix: replace hand-shake icon

--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 				 
                 <section>			
                     <h3 class="visuallyhidden">Social Links</h3>
-					<h3> 🤝🏻 Connect with Me </h3>				
+					<h3><img align="left" width="28px" src="img/handshake-svgrepo-com.svg" alt="" />&nbsp;&nbsp;Connect with Me</h3>				
 					<a class="social-link" href="https://www.linkedin.com/in/michaelwalbers/">
 						<img align="left" alt="Michael's LinkedIn" width="22px" src="img/linkedin-svgrepo-com.svg" alt="Linked In" />
 					</a>	
                     <a class="social-link" href="https://twitter.com/mwalbers1">
-						<img align="left" alt="Michael's LinkedIn" width="22px" src="img/twitter-svgrepo-com.svg" alt="Twitter" />
+						<img align="left" alt="Michael's Twitter" width="22px" src="img/twitter-svgrepo-com.svg" alt="Twitter" />
                     </a>
 					
 					<!--
