--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <img src="img/spiral-notepad.jpg" alt="">
         </figure>
                 <p>
-                    Use Natural Language Processing (NLP) to classify online Data Science job postings
+                    Use Natural Language Processing (NLP) to classify online Data Science job postings.
                 </p>
 
                 <a target="_blank" class="read-more" href="https://github.com/mwalbers1/DSC-609-Summer-2022/blob/main/Machine_Learning_Final_Project.ipynb">Read more</a>
