--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					</header>
 
 			<figure style="margin: auto;padding: 2px;">
-			  <img src="img/mouse-click.jpg" alt="">
+			  <img src="img/fraud_magnify.jpg" alt="">
 			</figure>
 					<p>
 						Use data mining techniques for detection of advertising click fraud.
