Updated About Me section

--- a/index.html
+++ b/index.html
@@ -192,7 +192,9 @@
 
             <div class="sidebar-text">
                 <h2>About Me</h2>
-                <p>I am interested in using data to solve real-world problems. My journey is to continually improve my skills in data analysis and data engineering.</p>
+                <p>Experienced data professional in application support, analysis, design, development, and technical leadership of large-scale data warehouse applications. Experienced in Python, R, and Alteryx for development of data pipelines, analytics modeling and reporting, and data transformations. 
+<br/><br/>
+I am interested in using data to solve real-world problems. My journey is to continually improve my skills in data analysis and data engineering.</p>
 
                 <section>
                     <h3 class="visuallyhidden">Social Links</h3>
